# rp2040-sd-bootloader

./: .gitmodules  CMakeLists.txt  README.md  application.ld  bootloader.ld  build.sh  clean.sh  gen_imghdr.py  linker_defines.ld  main.c  sd_hw_config.c  standalone.ld
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/bootloader/: CMakeLists.txt  application.ld  bootloader.ld  gen_imghdr.py  linker_defines.ld  main.c  uf2tool.py
